changes made to index.html by server two

--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,4 @@
 <html>
-  <head>
     <title>Sample "Hello, World" Application</title>
   </head>
   <body bgcolor=white>
@@ -15,10 +14,10 @@
       </tr>
     </table>
 
-    <p>This is the home page for the HelloWorld Web application. </p>
-      server two has modified this index after pulling from github.com whcih was pushed by server one 
-    
-<p>To prove that they work, you can execute either of the following links:
+    <p>This is two</p>
+   <p>shiva is blessed by god </p>
+  <p>love you guruji</p>
+    <p>To prove that they work, you can execute either of the following links:
     <ul>
       <li>To a <a href="hello.jsp">JSP page</a>.
       <li>To a <a href="hello">servlet</a>.
